[UPDATE] pubspec.yaml, pubspec.lock

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: public_health_model
-description: A new Flutter project.
-version: 0.0.1
-homepage:
+description: You can use model really easy
+version: 1.0.0
+homepage: https://github.com/Yxxnsu/public_health_model
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
